Fix counter alignment for mobile version

--- a/src/implementations/vanilla/components/news-ticker/_news-ticker.scss
+++ b/src/implementations/vanilla/components/news-ticker/_news-ticker.scss
@@ -69,7 +69,6 @@ $_btn-padding-horizontal: map.get(theme.$spacing, 's') !default;
 
 .ecl-news-ticker__counter {
   color: $_counter-color;
-  display: inline-flex;
   flex-grow: 1;
   font: map.get(theme.$font, 'm');
   font-weight: bold;
